--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,31 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+
+/* Reset All Styles */
+
+* {
+	appearance: none;
+	border-radius: 0;
+	border: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
+
+.container {
+	margin: 0 auto;
+	padding: 0 15px;
+}
+
+@media (min-width: 767px) and (max-width: 767px){
+	.container {
+		background-color: yellow;
+		width: 100%;
+	}	
+}
+@media (min-width: 767px) and (max-width: 991px){
+	.container {
+		background-color: green;
+		width: 100%;
+	}	
+}
+@media (min-width: 992px) and (max-width: 1199px){}
+@media (min-width: 1200px){}
