--- a/src/components/my-books/my-books.scss
+++ b/src/components/my-books/my-books.scss
@@ -21,33 +21,33 @@
 		width: 100%;
 		ul {
 			display: flex;
-			justify-content: space-between;
+			flex-wrap: wrap;
+			justify-content: flex-start;
 			margin: 30px 0;
 			width: 100%;
 		}
 		li {
 			position: relative;
-			&:hover {
-				.item-book {
-					&--img {
-						img {
-							filter: grayscale(0);
-						}
-					}
-				}
+			margin-right: 20px;
+			width: 120px;
+
+			&:last-of-type {
+				margin-right: 0;
 			}
+
 			.item-book {
 				&--img {
+					box-shadow: 1px 4px 12px rgba(0,0,0,0.2);
+					border-radius: 4px;
 					display: block;
-					height: 370px;
+					height: 147px;
 					margin-bottom: 20px;
 					overflow: hidden;
 					transition: ease-in-out 0.3s;
-					width: 245px;
+					width: 100%;
 
 					img {
 						display: block;
-						filter: grayscale(1);
 						width: 100%;
 					}
 				}
@@ -60,7 +60,7 @@
 						color: black;
 						font-family: 'Montserrat';
 						font-weight: 600;
-						font-size: 18px;
+						font-size: 14px;
 					}
 				}
 
@@ -72,20 +72,27 @@
 				}
 
 				&--selection {
+					background: #f1c40f;
+					border-radius: 0 0 3px 3px;
 					display: block;
 					position: absolute;
-					right: 10px;
-					top: 300px;
-					width: 150px;
+					right: 0;
+					top: 117px;
+					width: 100%;
 					z-index: 2;
 
 					select {
 						appearance: none;
+						background: transparent;
 						border-radius: 4px 4px 0 0;
 						display: block;
+						font-family: 'Montserrat';
+						font-weight: 600;
+						text-transform: uppercase;
 						height: 30px;
 						padding: 0 10px;
 						width: 100%;
+						font-size: 9px;
 
 						&:focus {
 							box-shadow: none;
