--- a/src/components/my-books/my-books.css
+++ b/src/components/my-books/my-books.css
@@ -7,11 +7,11 @@
     padding: 30px 0 10px 0;
     width: 100%; }
     .mr-shelf__title h2 {
-      color: #666;
+      color: #1abc9c;
       display: inline-block;
       font-family: 'Montserrat';
       font-weight: 800;
-      font-size: 12px;
+      font-size: 16px;
       letter-spacing: 1px;
       text-transform: uppercase; }
   .mr-shelf__list {
@@ -32,6 +32,7 @@
       .mr-shelf__list li .item-book--img {
         box-shadow: 1px 4px 12px rgba(0, 0, 0, 0.2);
         border-radius: 4px;
+        cursor: pointer;
         display: block;
         height: 147px;
         margin-bottom: 20px;
@@ -40,7 +41,10 @@
         width: 100%; }
         .mr-shelf__list li .item-book--img img {
           display: block;
+          filter: grayscale(1);
           width: 100%; }
+          .mr-shelf__list li .item-book--img img:hover {
+            filter: grayscale(0); }
       .mr-shelf__list li .item-book--title, .mr-shelf__list li .item-book--description {
         display: block;
         margin-bottom: 6px; }
@@ -53,26 +57,33 @@
         color: #999;
         font-size: 14px; }
       .mr-shelf__list li .item-book--selection {
-        background: #f1c40f;
-        border-radius: 0 0 3px 3px;
+        background: #1abc9c url("../../imgs/icons/chevron-down.svg") no-repeat center center;
+        border-radius: 50%;
         display: block;
+        height: 40px;
+        overflow: hidden;
         position: absolute;
-        right: 0;
-        top: 117px;
-        width: 100%;
+        right: 12px;
+        top: 90px;
+        transition: ease-in-out 0.1s;
+        width: 40px;
         z-index: 2; }
+        .mr-shelf__list li .item-book--selection:hover {
+          background-position: center 12px; }
         .mr-shelf__list li .item-book--selection select {
           appearance: none;
           background: transparent;
-          border-radius: 4px 4px 0 0;
+          border-radius: 90px;
+          cursor: pointer;
           display: block;
           font-family: 'Montserrat';
+          font-size: 9px;
           font-weight: 600;
+          height: 40px;
+          margin-left: -116px;
+          padding: 0 5px;
           text-transform: uppercase;
-          height: 30px;
-          padding: 0 10px;
-          width: 100%;
-          font-size: 9px; }
+          width: 160px; }
           .mr-shelf__list li .item-book--selection select:focus {
             box-shadow: none;
             outline: none; }
