--- a/src/components/my-books/my-books.scss
+++ b/src/components/my-books/my-books.scss
@@ -7,11 +7,11 @@
 		padding: 30px 0 10px 0;
 		width: 100%;
 		h2 {
-			color: #666;
+			color: #1abc9c;
 			display: inline-block;
 			font-family: 'Montserrat';
 			font-weight: 800;
-			font-size: 12px;
+			font-size: 16px;
 			letter-spacing: 1px;
 			text-transform: uppercase;
 		}
@@ -39,6 +39,7 @@
 				&--img {
 					box-shadow: 1px 4px 12px rgba(0,0,0,0.2);
 					border-radius: 4px;
+					cursor: pointer;
 					display: block;
 					height: 147px;
 					margin-bottom: 20px;
@@ -48,7 +49,12 @@
 
 					img {
 						display: block;
+						filter: grayscale(1);
 						width: 100%;
+
+						&:hover {
+							filter: grayscale(0);
+						}
 					}
 				}
 
@@ -72,27 +78,36 @@
 				}
 
 				&--selection {
-					background: #f1c40f;
-					border-radius: 0 0 3px 3px;
+					background: #1abc9c url('../../imgs/icons/chevron-down.svg') no-repeat center center;
+					border-radius: 50%;
 					display: block;
+					height: 40px;
+					overflow: hidden;
 					position: absolute;
-					right: 0;
-					top: 117px;
-					width: 100%;
+					right: 12px;
+					top: 90px;
+					transition: ease-in-out 0.1s;
+					width: 40px;
 					z-index: 2;
+
+					&:hover {
+						background-position: center 12px;
+					}
 
 					select {
 						appearance: none;
 						background: transparent;
-						border-radius: 4px 4px 0 0;
+						border-radius: 90px;
+						cursor: pointer;
 						display: block;
 						font-family: 'Montserrat';
-						font-weight: 600;
-						text-transform: uppercase;
-						height: 30px;
-						padding: 0 10px;
-						width: 100%;
 						font-size: 9px;
+						font-weight: 600;
+						height: 40px;
+						margin-left: -116px;
+						padding: 0 5px;
+						text-transform: uppercase;
+						width: 160px;
 
 						&:focus {
 							box-shadow: none;
