--- a/src/index.scss
+++ b/src/index.scss
@@ -52,6 +52,7 @@
 
 }
 
-@import './components/my-books/my-books.css'
+@import './components/my-books/my-books.css';
+@import './components/filter/input-filter.css';
 
 
