--- a/src/components/my-books/my-books.css
+++ b/src/components/my-books/my-books.css
@@ -1,3 +1,11 @@
+@keyframes slideIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px); }
+  to {
+    opacity: 1;
+    transform: translateY(0); } }
+
 .mr-shelf {
   display: block;
   width: 100%; }
@@ -24,6 +32,7 @@
       margin: 30px 0;
       width: 100%; }
     .mr-shelf__list li {
+      animation: slideIn ease-in-out 0.3s forwards;
       position: relative;
       margin-right: 20px;
       width: 120px; }
