--- a/src/components/my-books/my-books.scss
+++ b/src/components/my-books/my-books.scss
@@ -1,3 +1,14 @@
+@keyframes slideIn{
+	from{
+		opacity: 0;
+		transform: translateY(-10px);
+	}
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
 .mr-shelf {
 	display: block;
 	width: 100%;
@@ -27,6 +38,7 @@
 			width: 100%;
 		}
 		li {
+			animation: slideIn ease-in-out 0.3s forwards;
 			position: relative;
 			margin-right: 20px;
 			width: 120px;
