--- a/src/components/my-books/my-books.css
+++ b/src/components/my-books/my-books.css
@@ -1,10 +1,10 @@
 @keyframes slideIn {
   from {
     opacity: 0;
-    transform: translateY(-10px); }
+    transform: translateX(-15px); }
   to {
     opacity: 1;
-    transform: translateY(0); } }
+    transform: translateX(0); } }
 
 .mr-shelf {
   display: block;
@@ -43,7 +43,7 @@
         border-radius: 4px;
         cursor: pointer;
         display: block;
-        height: 147px;
+        height: 130px;
         margin-bottom: 20px;
         overflow: hidden;
         transition: ease-in-out 0.3s;
@@ -73,7 +73,7 @@
         overflow: hidden;
         position: absolute;
         right: 12px;
-        top: 90px;
+        top: 80px;
         transition: ease-in-out 0.1s;
         width: 40px;
         z-index: 2; }
