--- a/src/components/my-books/my-books.css
+++ b/src/components/my-books/my-books.css
@@ -1,10 +1,10 @@
 @keyframes slideIn {
   from {
     opacity: 0;
-    transform: translateX(-15px); }
+    transform: translateY(-15px); }
   to {
     opacity: 1;
-    transform: translateX(0); } }
+    transform: translateY(0); } }
 
 .mr-shelf {
   display: block;
