--- a/src/components/my-books/my-books.scss
+++ b/src/components/my-books/my-books.scss
@@ -1,11 +1,11 @@
 @keyframes slideIn{
 	from{
 		opacity: 0;
-		transform: translateX(-15px);
+		transform: translateY(-15px);
 	}
 	to {
 		opacity: 1;
-		transform: translateX(0);
+		transform: translateY(0);
 	}
 }
 
