Fazendo pagina de Busca

--- a/src/components/filter/input-filter.css
+++ b/src/components/filter/input-filter.css
@@ -4,9 +4,9 @@
 
 .filter-group {
   position: absolute;
-  right: 0;
-  top: -76px;
-  width: 70%;
+  right: 15%;
+  top: -82px;
+  width: 60%;
   z-index: 3; }
   .filter-group input {
     background: transparent;
