--- a/src/index.scss
+++ b/src/index.scss
@@ -55,5 +55,6 @@
 
 @import './components/my-books/my-books.css';
 @import './components/filter/input-filter.css';
+@import './components/search/search.css';
 
 
