--- a/src/components/filter/input-filter.scss
+++ b/src/components/filter/input-filter.scss
@@ -5,9 +5,9 @@
 
 .filter-group { 
 	position: absolute;
-	right: 0;
-	top: -76px;
-	width: 70%; 
+	right: 15%;
+	top: -82px;
+	width: 60%; 
 	z-index: 3;
 
 	input {
