--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -76,11 +76,10 @@
         fill: #1abc9c; }
   .mr-search-results {
     display: block;
-    height: 200px;
+    margin-top: 20px;
     overflow-x: hidden;
     overflow-y: auto;
-    width: 100%;
-    margin-top: 20px; }
+    width: 100%; }
     .mr-search-results ul {
       display: block;
       width: 100%; }
