--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -118,12 +118,9 @@
     background: #fff;
     border-radius: 6px;
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.08);
-    display: block;
-    margin: 0 auto;
     padding: 30px;
     position: relative;
-    transition: ease-in-out 0.2s;
-    width: 700px; }
+    transition: ease-in-out 0.2s; }
     .mr-search .container:hover {
       box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.08); }
     .mr-search .container .filter-group {
