--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 * {
   appearance: none;
   border: 0;
+  box-sizing: border-box;
   list-style: none;
   margin: 0;
   padding: 0; }
@@ -15,10 +16,12 @@
   margin: 0 auto;
   padding: 0 15px;
   position: relative;
-  width: 100%; }
+  max-width: 500px; }
   @media (min-width: 768px) {
     .container {
+      max-width: 100%;
       width: 750px; } }
   @media (min-width: 992px) {
     .container {
+      max-width: 100%;
       width: 970px; } }
