--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@
 * {
 	appearance: none;
 	border: 0;
+	box-sizing: border-box;
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -41,13 +42,15 @@
 	margin: 0 auto;
 	padding: 0 15px;
 	position: relative;
-	width: 100%;
+	max-width: 500px;
 
 	@include media(sm){
+		max-width: 100%;
 		width: 750px;
 	}
 
 	@include media(md){
+		max-width: 100%;
 		width: 970px;
 	}
 
