--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -1,11 +1,3 @@
-@keyframes SlideIn {
-  from {
-    opacity: 0;
-    transform: translateY(0); }
-  to {
-    opacity: 1;
-    transform: translateY(100px); } }
-
 .mr-search {
   background: #ecf0f1;
   height: 100%;
@@ -15,6 +7,7 @@
   width: 100%;
   z-index: 999; }
   .mr-search-button {
+    animation: Fade ease-in-out 0.5s forwards;
     align-items: center;
     display: inline-flex;
     height: 50px;
@@ -114,7 +107,7 @@
           font-size: 11px;
           line-height: 16px; }
   .mr-search .container {
-    animation: SlideIn ease-in-out 0.5s forwards;
+    animation: SlideInSearch ease-in-out 0.5s forwards;
     background: #fff;
     border-radius: 6px;
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.08);
