--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -1,15 +1,3 @@
-@keyframes SlideIn {
-	from {
-		opacity: 0;
-		transform: translateY(0);
-	}
-
-	to {
-		opacity: 1;
-		transform: translateY(100px);
-	}
-}
-
 .mr-search {
 	background: #ecf0f1;
 	height: 100%;
@@ -20,6 +8,8 @@
 	z-index: 999;
 
 	&-button {
+	animation: Fade ease-in-out 0.5s forwards;
+
 		align-items: center;
 		display: inline-flex;
 		height: 50px;
@@ -186,7 +176,7 @@
 	}
 
 	.container {
-		animation: SlideIn ease-in-out 0.5s forwards;
+		animation: SlideInSearch ease-in-out 0.5s forwards;
 		background: #fff;
 		border-radius: 6px;
 		box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 0 rgba(0,0,0,0.08);
