Consegui retornar sem erro de chave unica aeee

--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -72,6 +72,7 @@
     margin-top: 20px;
     overflow-x: hidden;
     overflow-y: auto;
+    height: 200px;
     width: 100%; }
     .mr-search-results ul {
       display: block;
