Fazendo funcionar a busca avancada

--- a/src/components/my-books/my-books.scss
+++ b/src/components/my-books/my-books.scss
@@ -27,6 +27,7 @@
 			width: 100%;
 		}
 		li {
+			animation: Fade ease-in-out 0.3s forwards;
 			position: relative;
 			margin-right: 20px;
 			width: 120px;
