--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -116,22 +116,28 @@
 		width: 100%;
 
 		ul {
-			display: block;
+			display: flex;
+			flex-wrap: wrap;
 			width: 100%;
 
 			li {
 				display: flex;
-				justify-content: space-between;
-
-
+				height: 150px;
+				justify-content: flex-start;
+				margin-right: 22px;
+				position: relative;
+				width: 150px;
+    			margin-bottom: 30px;
 			}
 		}
 
 		&__image {
-			border-radius: 3px;
-			height: 60px;
+			background-position: center top;
+			background-repeat: no-repeat;
+			background-size: cover;
+			height: 100px;
 			overflow: hidden;
-			width: 50px;
+			width: 100%;
 
 			img {
 				display: block;
@@ -140,12 +146,16 @@
 		}
 
 		&__text {
-			display: flex;
+			background: white;
+			bottom: 0;
+			flex-direction: column;
 			justify-content: flex-start;
-			width: 620px;
+			left: 0;
+			position: absolute;
+			padding: 10px;
+			width: 100%;
 
 			.text-col {
-				padding-right: 10px;
 				strong {
 					font-size: 10px;
 					text-transform: uppercase;
