--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -84,38 +84,40 @@
     overflow-y: auto;
     width: 100%; }
     .mr-search-results ul {
-      display: block;
+      display: flex;
+      flex-wrap: wrap;
       width: 100%; }
       .mr-search-results ul li {
         display: flex;
-        justify-content: space-between; }
+        justify-content: flex-start;
+        width: 30%; }
     .mr-search-results__image {
       border-radius: 3px;
-      height: 60px;
+      height: 150px;
       overflow: hidden;
-      width: 50px; }
+      width: 120px; }
       .mr-search-results__image img {
         display: block;
         width: 100%; }
     .mr-search-results__text {
       display: flex;
+      flex-direction: column;
       justify-content: flex-start;
-      width: 620px; }
-      .mr-search-results__text .text-col {
-        padding-right: 10px; }
-        .mr-search-results__text .text-col strong {
-          font-size: 10px;
-          text-transform: uppercase;
-          font-family: 'Montserrat';
-          font-weight: 600; }
-        .mr-search-results__text .text-col h2, .mr-search-results__text .text-col p, .mr-search-results__text .text-col li {
-          font-family: 'Montserrat';
-          font-weight: 600;
-          font-size: 13px; }
-        .mr-search-results__text .text-col p, .mr-search-results__text .text-col li {
-          font-weight: 400;
-          font-size: 11px;
-          line-height: 16px; }
+      padding-left: 15px;
+      width: 150px; }
+      .mr-search-results__text .text-col strong {
+        font-family: 'Montserrat';
+        font-size: 10px;
+        font-weight: 600;
+        text-transform: uppercase; }
+      .mr-search-results__text .text-col h2, .mr-search-results__text .text-col p, .mr-search-results__text .text-col li {
+        font-family: 'Montserrat';
+        font-weight: 600;
+        font-size: 13px; }
+      .mr-search-results__text .text-col p, .mr-search-results__text .text-col li {
+        font-weight: 400;
+        font-size: 11px;
+        line-height: 16px; }
   .mr-search .container {
     animation: SlideInSearch ease-in-out 0.5s forwards;
     background: #fff;
