--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -116,22 +116,23 @@
 		width: 100%;
 
 		ul {
-			display: block;
+			display: flex;
+			flex-wrap: wrap;
 			width: 100%;
 
 			li {
 				display: flex;
-				justify-content: space-between;
-
-
+				justify-content: flex-start;
+				width: 30%;
 			}
 		}
 
 		&__image {
 			border-radius: 3px;
-			height: 60px;
+			height: 150px;
 			overflow: hidden;
-			width: 50px;
+			width: 120px;
+
 
 			img {
 				display: block;
@@ -141,16 +142,18 @@
 
 		&__text {
 			display: flex;
+			flex-direction: column;
 			justify-content: flex-start;
-			width: 620px;
+			padding-left: 15px;
+			width: 150px;
+
 
 			.text-col {
-				padding-right: 10px;
 				strong {
-					font-size: 10px;
-					text-transform: uppercase;
 					font-family: 'Montserrat';
+					font-size: 10px;
 					font-weight: 600;
+					text-transform: uppercase;
 				}
 
 				h2, p, li {
@@ -164,23 +167,6 @@
 					font-size: 11px;
 					line-height: 16px;
 				}
-
-				// &-title {
-				// 	background: red;
-				// 	width: 120px;
-				// 	display: block;
-				// }
-
-				// &-authors {
-				// 	display: block;
-				// 	background:blue;
-				// 	width: 140px;
-				// }
-
-				// &-description {
-				// 	display: block;
-				// 	width: 350px;
-				// }
 			}
 		}
 	}
