--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -6,7 +6,7 @@
   padding-bottom: 150px;
   width: 100%;
   align-items: flex-start;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: #fff;
   height: 100%;
   justify-content: center;
   left: 0;
@@ -77,59 +77,9 @@
       width: 35px; }
       .mr-search-title .mr-search-button__icon path {
         fill: #1abc9c; }
-  .mr-search-results {
-    display: block;
-    margin-top: 20px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    width: 100%; }
-    .mr-search-results ul {
-      display: flex;
-      flex-wrap: wrap;
-      width: 100%; }
-      .mr-search-results ul li {
-        display: flex;
-        height: 150px;
-        justify-content: flex-start;
-        margin-right: 22px;
-        position: relative;
-        width: 150px;
-        margin-bottom: 30px; }
-    .mr-search-results__image {
-      background-position: center top;
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 100px;
-      overflow: hidden;
-      width: 100%; }
-      .mr-search-results__image img {
-        display: block;
-        width: 100%; }
-    .mr-search-results__text {
-      background: white;
-      bottom: 0;
-      flex-direction: column;
-      justify-content: flex-start;
-      left: 0;
-      position: absolute;
-      padding: 10px;
-      width: 100%; }
-      .mr-search-results__text .text-col strong {
-        font-family: 'Montserrat';
-        font-size: 10px;
-        font-weight: 600;
-        text-transform: uppercase; }
-      .mr-search-results__text .text-col h2, .mr-search-results__text .text-col p, .mr-search-results__text .text-col li {
-        font-family: 'Montserrat';
-        font-weight: 600;
-        font-size: 13px; }
-      .mr-search-results__text .text-col p, .mr-search-results__text .text-col li {
-        font-weight: 400;
-        font-size: 11px;
-        line-height: 16px; }
   .mr-search .container {
     animation: SlideInSearch ease-in-out 0.5s forwards;
-    background: #fff;
+    background: #ecf0f1;
     border-radius: 6px;
     box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.08);
     padding: 30px;
@@ -149,3 +99,73 @@
       .mr-search .container .filter-group input {
         border-bottom: 1px solid #95a5a6;
         color: #7f8c8d; }
+  .mr-search .item-book--selection {
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.3);
+    top: 50px; }
+
+.mr-search-results {
+  display: block;
+  margin-top: 20px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  width: 100%; }
+  .mr-search-results ul {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%; }
+    .mr-search-results ul li {
+      box-shadow: 0 1px 2px rgba(25, 25, 25, 0.2);
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      margin-right: 22px;
+      width: 150px;
+      margin-bottom: 30px;
+      position: relative; }
+  .mr-search-results__image {
+    border-radius: 3px 3px 0 0;
+    display: block;
+    height: 100px;
+    width: 100%;
+    overflow: hidden;
+    position: relative; }
+    .mr-search-results__image img {
+      display: block;
+      width: 100%; }
+    .mr-search-results__image::before {
+      content: '';
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      transition: ease-in-out 0.3s;
+      background: rgba(0, 0, 0, 0.1); }
+    .mr-search-results__image:hover::before {
+      background: rgba(0, 0, 0, 0.5); }
+  .mr-search-results__text {
+    display: block;
+    flex-direction: column;
+    padding: 7px 10px 7px 10px;
+    width: 100%; }
+    .mr-search-results__text .text-col strong {
+      font-family: 'Montserrat';
+      font-size: 10px;
+      font-weight: 600;
+      text-transform: uppercase; }
+    .mr-search-results__text .text-col a, .mr-search-results__text .text-col p {
+      font-family: 'Montserrat';
+      font-weight: 600;
+      font-size: 12px; }
+    .mr-search-results__text .text-col a {
+      color: #222;
+      display: block;
+      margin: 4px 0;
+      text-decoration: none; }
+      .mr-search-results__text .text-col a:hover {
+        text-decoration: underline; }
+    .mr-search-results__text .text-col p {
+      color: #666;
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 13px; }
