--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -7,7 +7,7 @@
 	padding-bottom: 150px;
 	width: 100%;
     align-items: flex-start;
-    background-color: rgba(0,0,0,0.8);
+    background-color: #fff;
     height: 100%;
     justify-content: center;
     left: 0;
@@ -108,79 +108,11 @@
 		}
 	}
 
-	&-results {
-		display: block;
-		margin-top: 20px;
-		overflow-x: hidden;
-		overflow-y: auto;
-		width: 100%;
-
-		ul {
-			display: flex;
-			flex-wrap: wrap;
-			width: 100%;
-
-			li {
-				display: flex;
-				height: 150px;
-				justify-content: flex-start;
-				margin-right: 22px;
-				position: relative;
-				width: 150px;
-    			margin-bottom: 30px;
-			}
-		}
-
-		&__image {
-			background-position: center top;
-			background-repeat: no-repeat;
-			background-size: cover;
-			height: 100px;
-			overflow: hidden;
-			width: 100%;
-
-			img {
-				display: block;
-				width: 100%;
-			}
-		}
-
-		&__text {
-			background: white;
-			bottom: 0;
-			flex-direction: column;
-			justify-content: flex-start;
-			left: 0;
-			position: absolute;
-			padding: 10px;
-			width: 100%;
-
-			.text-col {
-				strong {
-					font-family: 'Montserrat';
-					font-size: 10px;
-					font-weight: 600;
-					text-transform: uppercase;
-				}
-
-				h2, p, li {
-					font-family: 'Montserrat';
-					font-weight: 600;
-					font-size: 13px;
-				}
-
-				p, li {
-					font-weight: 400;
-					font-size: 11px;
-					line-height: 16px;
-				}
-			}
-		}
-	}
+	
 
 	.container {
 		animation: SlideInSearch ease-in-out 0.5s forwards;
-		background: #fff;
+		background: #ecf0f1;
 		border-radius: 6px;
 		box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 0 rgba(0,0,0,0.08);
 		padding: 30px;
@@ -206,6 +138,106 @@
 			input {
 				border-bottom: 1px solid #95a5a6;
 				color: #7f8c8d;
+			}
+		}
+	}
+
+	.item-book--selection {
+		box-shadow: 0px 3px 10px rgba(0,0,0,0.3);
+		top: 50px;
+	}
+}
+
+.mr-search-results {
+	display: block;
+	margin-top: 20px;
+	overflow-x: hidden;
+	overflow-y: auto;
+	width: 100%;
+
+	ul {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+
+		li {
+			box-shadow: 0 1px 2px rgba(25,25,25,0.2);
+			background: #fff;
+			display: flex;
+			flex-direction: column;
+			margin-right: 22px;
+			width: 150px;
+			margin-bottom: 30px;
+			position: relative;
+		}
+	}
+
+	&__image {
+		border-radius: 3px 3px 0 0;
+		display: block;
+		height: 100px;
+		width: 100%;
+		overflow: hidden;
+		position: relative;
+
+		img {
+			display: block;
+			width: 100%;
+		}
+
+		&::before {
+			content: '';
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			left: 0;
+			top: 0;
+			transition: ease-in-out 0.3s;
+			background: rgba(0,0,0,0.1);
+		}
+
+		&:hover {
+			&::before {
+				background: rgba(0,0,0,0.5);
+			}	
+		}
+	}
+
+	&__text {
+		display: block;
+		flex-direction: column;
+		padding: 7px 10px 7px 10px;
+		width: 100%;
+
+		.text-col {
+			strong {
+				font-family: 'Montserrat';
+				font-size: 10px;
+				font-weight: 600;
+				text-transform: uppercase;
+			}
+
+			a, p {
+				font-family: 'Montserrat';
+				font-weight: 600;
+				font-size: 12px;
+			}
+
+			a {
+				color: #222;
+				display: block;
+				margin: 4px 0;
+				text-decoration: none;
+				&:hover {
+					text-decoration: underline;
+				}
+			}
+
+			p {
+				color: #666;
+				font-weight: 400;
+				font-size: 10px;
+				line-height: 13px;
 			}
 		}
 	}
