--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -6,7 +6,7 @@
   padding-bottom: 150px;
   width: 100%;
   align-items: flex-start;
-  background-color: #fff;
+  background: #ecf0f1;
   height: 100%;
   justify-content: center;
   left: 0;
@@ -79,15 +79,11 @@
         fill: #1abc9c; }
   .mr-search .container {
     animation: SlideInSearch ease-in-out 0.5s forwards;
-    background: #ecf0f1;
     border-radius: 6px;
-    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.08);
     padding: 30px;
     position: relative;
     transition: ease-in-out 0.2s;
     width: 920px; }
-    .mr-search .container:hover {
-      box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.2), 0 0 0 0 rgba(0, 0, 0, 0.08); }
     .mr-search .container .filter-group {
       position: relative;
       right: 0;
@@ -114,6 +110,7 @@
     flex-wrap: wrap;
     width: 100%; }
     .mr-search-results ul li {
+      animation: slideIn ease-in-out 0.3s forwards;
       box-shadow: 0 1px 2px rgba(25, 25, 25, 0.2);
       background: #fff;
       display: flex;
