--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -7,7 +7,7 @@
 	padding-bottom: 150px;
 	width: 100%;
     align-items: flex-start;
-    background-color: #fff;
+	background: #ecf0f1;
     height: 100%;
     justify-content: center;
     left: 0;
@@ -108,21 +108,13 @@
 		}
 	}
 
-	
-
 	.container {
 		animation: SlideInSearch ease-in-out 0.5s forwards;
-		background: #ecf0f1;
 		border-radius: 6px;
-		box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2), 0 0 0 0 rgba(0,0,0,0.08);
 		padding: 30px;
 		position: relative;
 		transition: ease-in-out 0.2s;
 		width: 920px;
-
-		&:hover {
-			box-shadow: 0 15px 30px 0 rgba(0,0,0,0.2), 0 0 0 0 rgba(0,0,0,0.08);
-		}
 
 		.filter-group {
 			position: relative;
@@ -161,6 +153,7 @@
 		width: 100%;
 
 		li {
+			animation: slideIn ease-in-out 0.3s forwards;
 			box-shadow: 0 1px 2px rgba(25,25,25,0.2);
 			background: #fff;
 			display: flex;
