--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -12,59 +12,55 @@
     font-family: 'Montserrat';
     font-weight: 400;
     font-size: 14px; }
-  .loading__spinner {
-    align-items: center;
-    box-sizing: border-box;
-    display: flex;
-    flex-basis: 25%;
-    flex-direction: column;
-    flex-grow: 1;
-    flex-shrink: 0;
-    flex: 0 1 auto;
-    height: 100px;
-    justify-content: center;
-    width: 200px; }
-    .loading__spinner-balls {
-      position: relative;
-      top: -10px;
-      left: -10px; }
-      .loading__spinner-balls > div {
-        animation-fill-mode: both;
-        background-color: #1abc9c;
-        border-radius: 100%;
-        height: 15px;
-        margin: 2px;
-        position: absolute;
-        width: 15px; }
-        .loading__spinner-balls > div:nth-child(1) {
-          top: 25px;
-          left: 0;
-          animation: ball-spin-fade-loader 1s -.96s infinite linear; }
-        .loading__spinner-balls > div:nth-child(2) {
-          top: 17.05px;
-          left: 17.05px;
-          animation: ball-spin-fade-loader 1s -.84s infinite linear; }
-        .loading__spinner-balls > div:nth-child(3) {
-          top: 0;
-          left: 25px;
-          animation: ball-spin-fade-loader 1s -.72s infinite linear; }
-        .loading__spinner-balls > div:nth-child(4) {
-          top: -17.05px;
-          left: 17.05px;
-          animation: ball-spin-fade-loader 1s -.6s infinite linear; }
-        .loading__spinner-balls > div:nth-child(5) {
-          top: -25px;
-          left: 0;
-          animation: ball-spin-fade-loader 1s -.48s infinite linear; }
-        .loading__spinner-balls > div:nth-child(6) {
-          top: -17.05px;
-          left: -17.05px;
-          animation: ball-spin-fade-loader 1s -.36s infinite linear; }
-        .loading__spinner-balls > div:nth-child(7) {
-          top: 0;
-          left: -25px;
-          animation: ball-spin-fade-loader 1s -.24s infinite linear; }
-        .loading__spinner-balls > div:nth-child(8) {
-          top: 17.05px;
-          left: -17.05px;
-          animation: ball-spin-fade-loader 1s -.12s infinite linear; }
+  .loading .book {
+    background: rgba(26, 188, 156, 0.3);
+    border: 5px solid #1abc9c;
+    height: 60px;
+    margin: 30px auto;
+    position: relative;
+    width: 100px;
+    display: block; }
+  .loading .book__page {
+    animation-fill-mode: forwards;
+    animation: flip 1.2s infinite linear;
+    background: #1abc9c;
+    border-bottom: 5px solid #1abc9c;
+    border-right: 5px solid #1abc9c;
+    border-top: 5px solid #1abc9c;
+    height: 60px;
+    left: 50%;
+    margin: 0 auto;
+    position: absolute;
+    top: -5px;
+    transform-origin: 0% 50%;
+    width: 50px; }
+    .loading .book__page:nth-child(1) {
+      z-index: -1;
+      animation-delay: 1.4s; }
+    .loading .book__page:nth-child(2) {
+      z-index: -2;
+      animation-delay: 2.8s; }
+    .loading .book__page:nth-child(3) {
+      z-index: -3;
+      animation-delay: 4.2s; }
+
+@keyframes flip {
+  0% {
+    transform: perspective(600px) rotateY(0deg); }
+  20% {
+    background: #148f77; }
+  29.9% {
+    background: #148f77; }
+  30% {
+    transform: perspective(200px) rotateY(-90deg);
+    background: #1abc9c; }
+  54.999% {
+    opacity: 1; }
+  55% {
+    opacity: 0; }
+  60% {
+    transform: perspective(200px) rotateY(-180deg);
+    background: #1abc9c; }
+  100% {
+    transform: perspective(200px) rotateY(-180deg);
+    background: #1abc9c; } }
