--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -17,72 +17,78 @@
 		}
 	}
 
-	&__spinner {
-		align-items: center;
-		box-sizing: border-box;
-		display: flex;
-		flex-basis: 25%;
-		flex-direction: column;
-		flex-grow: 1;
-		flex-shrink: 0;
-		flex: 0 1 auto;
-		height: 100px;
-		justify-content: center;
-		width: 200px;
+	$peter-river:#1abc9c;
+$clouds:#1abc9c;
 
-		&-balls {
-			position: relative;
-			top: -10px;
-			left: -10px;
-			> div {
-				animation-fill-mode: both;
-				background-color: #1abc9c;
-				border-radius: 100%;
-				height: 15px;
-				margin: 2px;
-				position: absolute;
-				width: 15px;
-				&:nth-child(1){
-					top: 25px;
-					left: 0;
-					animation: ball-spin-fade-loader 1s -.96s infinite linear;
-				}
-				&:nth-child(2){
-					top: 17.05px;
-					left: 17.05px;
-					animation: ball-spin-fade-loader 1s -.84s infinite linear;
-				}
-				&:nth-child(3){
-					top: 0;
-					left: 25px;
-					animation: ball-spin-fade-loader 1s -.72s infinite linear;
-				}
-				&:nth-child(4){
-					top: -17.05px;
-					left: 17.05px;
-					animation: ball-spin-fade-loader 1s -.6s infinite linear;
-				}
-				&:nth-child(5){
-					top: -25px;
-					left: 0;
-					animation: ball-spin-fade-loader 1s -.48s infinite linear;
-				}
-				&:nth-child(6){
-					top: -17.05px;
-					left: -17.05px;
-					animation: ball-spin-fade-loader 1s -.36s infinite linear;
-				}
-				&:nth-child(7){
-					top: 0;
-					left: -25px;
-					animation: ball-spin-fade-loader 1s -.24s infinite linear;
-				}
-				&:nth-child(8){
-					top: 17.05px;
-					left: -17.05px;
-					animation: ball-spin-fade-loader 1s -.12s infinite linear;
-				}
-			}
-		}	
-	}
+
+.book{
+  background: rgba(#1abc9c, 0.3);
+  border: 5px solid $clouds;
+  height: 60px;
+  margin: 30px auto;
+  position: relative;
+  width: 100px;
+  display: block;
+}
+.book__page{
+  animation-fill-mode: forwards;
+  animation: flip 1.2s infinite linear;
+  background: $peter-river;
+  border-bottom: 5px solid $clouds;
+  border-right: 5px solid $clouds;
+  border-top: 5px solid $clouds;
+  height: 60px;
+  left: 50%;
+  margin: 0 auto;
+  position: absolute;
+  top: -5px;
+  transform-origin: 0% 50%;
+  width: 50px;
+  
+  @for $i from 1 through 3 {
+    &:nth-child(#{$i}) { 
+      z-index:-$i;
+      animation-delay:1.4s*$i;
+    }
+  }
+}
+
+@keyframes flip {
+  0%{
+      transform: perspective( 600px )
+      rotateY( -0deg );
+  }
+  
+  20%{
+    background:darken($peter-river,10%);
+  }
+  
+  29.9%{
+      background:darken($peter-river,10%);
+  }
+  30%{
+      transform: perspective( 200px )
+      rotateY( -90deg );
+      background:$peter-river;
+  }
+  
+  54.999%{
+    opacity:1;
+  }
+  55%{
+    opacity:0;
+  }
+  
+  60%{
+    transform: perspective( 200px )
+    rotateY( -180deg );
+    background:$peter-river;
+  }
+  
+  100%{
+    transform: perspective( 200px )
+    rotateY( -180deg );
+    background:$peter-river;
+  }
+}
 }
