--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -153,7 +153,7 @@
 		width: 100%;
 
 		li {
-			animation: slideIn ease-in-out 0.3s forwards;
+			animation: Fade ease-in-out 0.3s forwards;
 			box-shadow: 0 1px 2px rgba(25,25,25,0.2);
 			background: #fff;
 			display: flex;
