--- a/src/components/my-books/my-books.css
+++ b/src/components/my-books/my-books.css
@@ -25,9 +25,11 @@
       width: 100%; }
     .mr-shelf__list li {
       animation: Fade ease-in-out 0.3s forwards;
+      box-shadow: 0 1px 2px rgba(25, 25, 25, 0.2);
       background: #fff;
       position: relative;
       margin-right: 20px;
+      margin-bottom: 30px;
       width: 150px; }
       .mr-shelf__list li:last-of-type {
         margin-right: 0; }
