--- a/src/components/my-books/my-books.scss
+++ b/src/components/my-books/my-books.scss
@@ -28,9 +28,11 @@
 		}
 		li {
 			animation: Fade ease-in-out 0.3s forwards;
+			box-shadow: 0 1px 2px rgba(25, 25, 25, 0.2);
 			background: #fff;
 			position: relative;
 			margin-right: 20px;
+			margin-bottom: 30px;
 			width: 150px;
 
 			&:last-of-type {
