--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -150,18 +150,16 @@
       font-size: 10px;
       font-weight: 600;
       text-transform: uppercase; }
-    .mr-search-results__text .text-col a, .mr-search-results__text .text-col p {
+    .mr-search-results__text .text-col h2, .mr-search-results__text .text-col p {
       font-family: 'Montserrat';
       font-weight: 600;
       font-size: 12px;
       text-transform: capitalize; }
-    .mr-search-results__text .text-col a {
+    .mr-search-results__text .text-col h2 {
       color: #222;
       display: block;
       margin: 4px 0;
       text-decoration: none; }
-      .mr-search-results__text .text-col a:hover {
-        text-decoration: underline; }
     .mr-search-results__text .text-col p {
       color: #666;
       font-weight: 400;
