--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-/* Mixin helper for media-queries */
-/* Reset All Styles */
+/* Mixin helper para media-queries */
+/* Reseta estilos */
 @import url(./components/my-books/my-books.css);
 @import url(./components/filter/input-filter.css);
 @import url(./components/search/search.css);
