Ajustando layout dos botoes e cores gerais

--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -13,8 +13,8 @@
     font-weight: 400;
     font-size: 14px; }
   .loading .book {
-    background: rgba(26, 188, 156, 0.3);
-    border: 5px solid #1abc9c;
+    background: rgba(127, 140, 141, 0.3);
+    border: 5px solid #7f8c8d;
     height: 60px;
     margin: 30px auto;
     position: relative;
@@ -23,10 +23,10 @@
   .loading .book__page {
     animation-fill-mode: forwards;
     animation: flip 1.2s infinite linear;
-    background: #1abc9c;
-    border-bottom: 5px solid #1abc9c;
-    border-right: 5px solid #1abc9c;
-    border-top: 5px solid #1abc9c;
+    background: #7f8c8d;
+    border-bottom: 5px solid #7f8c8d;
+    border-right: 5px solid #7f8c8d;
+    border-top: 5px solid #7f8c8d;
     height: 60px;
     left: 50%;
     margin: 0 auto;
@@ -48,19 +48,19 @@
   0% {
     transform: perspective(600px) rotateY(0deg); }
   20% {
-    background: #148f77; }
+    background: #667273; }
   29.9% {
-    background: #148f77; }
+    background: #667273; }
   30% {
     transform: perspective(200px) rotateY(-90deg);
-    background: #1abc9c; }
+    background: #7f8c8d; }
   54.999% {
     opacity: 1; }
   55% {
     opacity: 0; }
   60% {
     transform: perspective(200px) rotateY(-180deg);
-    background: #1abc9c; }
+    background: #7f8c8d; }
   100% {
     transform: perspective(200px) rotateY(-180deg);
-    background: #1abc9c; } }
+    background: #7f8c8d; } }
