--- a/src/components/loader/loader.scss
+++ b/src/components/loader/loader.scss
@@ -17,12 +17,12 @@
 		}
 	}
 
-	$peter-river:#1abc9c;
-$clouds:#1abc9c;
+$peter-river:#7f8c8d;
+$clouds:#7f8c8d;
 
 
 .book{
-  background: rgba(#1abc9c, 0.3);
+  background: rgba(#7f8c8d, 0.3);
   border: 5px solid $clouds;
   height: 60px;
   margin: 30px auto;
