--- a/src/components/filter/input-filter.css
+++ b/src/components/filter/input-filter.css
@@ -17,7 +17,7 @@
     font-size: 16px;
     font-weight: 600;
     padding: 10px 10px 10px 5px;
-    width: 100%; }
+    width: 97.5%; }
     .filter-group input:focus {
       outline: none; }
     .filter-group input:focus ~ label,
@@ -43,9 +43,9 @@
   .filter-group .bar {
     position: relative;
     display: block;
-    width: 100%; }
+    width: 97.5%; }
     .filter-group .bar::before, .filter-group .bar::after {
-      background: #1abc9c;
+      background: #7f8c8d;
       bottom: 0;
       content: '';
       height: 2px;
@@ -68,7 +68,7 @@
 
 @keyframes inputHighlighter {
   from {
-    background: #1abc9c; }
+    background: #7f8c8d; }
   to {
     background: transparent;
     width: 0; } }
