--- a/src/components/filter/input-filter.scss
+++ b/src/components/filter/input-filter.scss
@@ -19,7 +19,7 @@
 		font-size: 16px;
 		font-weight: 600;
 		padding: 10px 10px 10px 5px;
-		width: 100%;
+		width: 97.5%;
 
 		&:focus { 
 			outline: none; 
@@ -57,11 +57,11 @@
 	.bar {
 		position: relative; 
 		display: block; 
-		width: 100%; 
+		width: 97.5%; 
 
 		&::before, 
 		&::after 	{
-			background:#1abc9c; 
+			background:#7f8c8d; 
 			bottom: 0; 
 			content: '';
 			height: 2px; 
@@ -92,7 +92,7 @@
 	 
 	@keyframes inputHighlighter {
 		from	{ 
-			background: #1abc9c; 
+			background: #7f8c8d; 
 		}
 
 		to	{ 
