--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -36,7 +36,7 @@
       width: 30px;
       will-change: transform; }
       .mr-search-button--close .mr-search-button__icon-close path {
-        fill: #1abc9c; }
+        fill: #7f8c8d; }
       .mr-search-button--close:hover {
         transform: scale(1.2); }
       .mr-search-button--close:focus {
@@ -52,7 +52,7 @@
       .mr-search-button a:hover {
         transform: scale(1.2); }
         .mr-search-button a:hover .mr-search-button__icon path {
-          fill: #1abc9c; }
+          fill: #7f8c8d; }
     .mr-search-button__icon {
       display: inline-block;
       max-height: 100%;
@@ -65,7 +65,7 @@
         right: 0;
         top: 0; }
   .mr-search-title {
-    color: #1abc9c;
+    color: #7f8c8d;
     font-family: 'Montserrat';
     font-weight: 400; }
     .mr-search-title .mr-search-button__icon {
@@ -76,7 +76,7 @@
       transform: translateY(-2px);
       width: 35px; }
       .mr-search-title .mr-search-button__icon path {
-        fill: #1abc9c; }
+        fill: #7f8c8d; }
   .mr-search .container {
     animation: SlideInSearch ease-in-out 0.5s forwards;
     border-radius: 6px;
@@ -119,6 +119,19 @@
       width: 150px;
       margin-bottom: 30px;
       position: relative; }
+  .mr-search-results .mr-current-shelf {
+    display: inline-block;
+    padding: 4px 6px;
+    display: inline-block;
+    border-radius: 3px;
+    padding: 2px 4px;
+    font-size: 11px;
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    font-weight: 600;
+    background: #7f8c8d;
+    color: #fff;
+    margin-top: auto; }
   .mr-search-results__image {
     border-radius: 3px 3px 0 0;
     display: block;
@@ -128,6 +141,7 @@
     position: relative; }
     .mr-search-results__image img {
       display: block;
+      transition: ease-in-out 0.3s;
       width: 100%; }
     .mr-search-results__image::before {
       content: '';
@@ -150,12 +164,12 @@
       font-size: 10px;
       font-weight: 600;
       text-transform: uppercase; }
-    .mr-search-results__text .text-col h2, .mr-search-results__text .text-col p {
+    .mr-search-results__text .text-col h3, .mr-search-results__text .text-col p {
       font-family: 'Montserrat';
       font-weight: 600;
       font-size: 12px;
       text-transform: capitalize; }
-    .mr-search-results__text .text-col h2 {
+    .mr-search-results__text .text-col h3 {
       color: #222;
       display: block;
       margin: 4px 0;
