--- a/src/components/search/search.scss
+++ b/src/components/search/search.scss
@@ -147,6 +147,16 @@
 	overflow-y: auto;
 	width: 100%;
 
+	p {
+		color: #95a5a6;
+		font-family: 'Montserrat';
+		font-size: 14px;
+		font-weight: 300;
+		strong {
+			font-weight: 600;
+		}
+	}
+
 	ul {
 		display: flex;
 		flex-wrap: wrap;
@@ -177,7 +187,7 @@
 		font-weight: 600;
 		background: #7f8c8d;
 		color: #fff;
-		margin-top: auto;
+		margin: 10px 0;
 	}
 
 	&__image {
